2013-10-29  Teodor Zlatanov  <tzz@lifelogs.com>

	* nnimap.el (nnimap-open-connection-1): `auth-source-search' for the
	`nnoo-current-server' first, then for the actual `nnimap-address' to
	allow netrc entries for the nnoo server to coexist with netrc entries
	for the `nnimap-address'.

2013-10-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-decode.el (mm-dissect-buffer): Revert last change.
	* nndoc.el (nndoc-dissect-mime-parts-sub): Ditto.
	The problem that motivated those changes was attributed to a broken
	mail sender, and has been fixed.

2013-10-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-decode.el (mm-dissect-buffer): Guess content-type if the first
	token is missing in the Content-Type header.

	* nndoc.el (nndoc-dissect-mime-parts-sub): Ditto.

2013-09-18  Glenn Morris  <rgm@gnu.org>

	* gnus-util.el (image-size): Declare.

2013-09-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-icalendar.el (gnus-icalendar-event--find-attendee)
	(gnus-icalendar-event-from-ical)
	(gnus-icalendar-event--build-reply-event-body)
	(gnus-icalendar-event-reply-from-buffer)
	(gnus-icalendar-find-org-event-file)
	(gnus-icalendar-event->gnus-calendar, gnus-icalendar-reply)
	(gnus-icalendar-mm-inline): Use gmm-labels instead of labels or flet.

	* mm-util.el (mm-special-display-p): Isolate XEmacs stuff.

2013-09-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-salt.el (gnus-tree-mode): Use define-derived-mode.
	Use save-current-buffer.
	(gnus-tree-mode-map): Initialize in the declaration.
	(gnus-pick-mouse-pick-region): Remove unused var `fun'.
	(scroll-in-place): Defvar it.
	(gnus-tmp-*): Defvar them.
	(gnus-get-tree-buffer): Use derived-mode-p.
	(gnus--let-eval): New macro.
	(gnus-tree-highlight-node): Use it to avoid dynamic binding of
	non-prefixed variables.
	(gnus-tree-open, gnus-tree-close): Remove unused arg `group'.

	* gnus-sum.el (gnus-summary-highlight): Remove `below' from the list of
	vars since it doesn't seem to be available.