@@ -113,7 +113,8 @@ If CONFIRM is non-nil, the user will be asked for an NNTP server."
 	(setq gnus-nntp-server
 	      (gnus-completing-read "NNTP server"
                                     (cons gnus-nntp-server
-                                          gnus-secondary-servers)
+					  (if (boundp 'gnus-secondary-servers)
+					      gnus-secondary-servers))
                                     nil gnus-nntp-server)))
 
       (when (and gnus-nntp-server
