@@ -1,3 +1,9 @@
+2013-10-30  Glenn Morris  <rgm@gnu.org>
+
+	* gnus-group.el (gnus-group-browse-foreign-server):
+	* gnus-int.el (gnus-start-news-server):
+	Silence compiler obsolescence warning.
+
 2013-10-29  Teodor Zlatanov  <tzz@lifelogs.com>
 
 	* nnimap.el (nnimap-open-connection-1): `auth-source-search' for the
